--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "nodemon": "^2.0.22",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
     "mongoose": "^7.2.2",
     "socket.io": "^4.6.2"
   }
