--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
-    "socket.io": "^4.6.2"
+    "simple-peer": "^9.11.1",
+    "socket.io": "^4.6.2",
+    "wrtc": "^0.4.7"
   }
 }
