--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^3.5.9",
     "mongoose": "^7.2.2",
+    "nodemailer": "^6.9.3",
     "redis": "^2.8.0",
     "sha1": "^1.1.1",
     "uuid": "^8.2.0"
