--- a/client/collabFrontEnd/package.json
+++ b/client/collabFrontEnd/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-config": "^5.1.1",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
