--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.37.2",
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^3.5.9",
     "mongoose": "^7.2.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "redis": "^2.8.0",
     "sha1": "^1.1.1",
