--- a/server/package.json
+++ b/server/package.json
@@ -21,15 +21,17 @@
     "nodemailer": "^6.9.3",
     "redis": "^2.8.0",
     "sha1": "^1.1.1",
-    "uuid": "^8.2.0"
+    "simple-peer": "^9.11.1",
+    "uuid": "^8.2.0",
+    "wrtc": "^0.4.7"
   },
   "devDependencies": {
     "eslint": "^6.4.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
+    "mongoose": "^7.2.2",
     "nodemon": "^2.0.22",
     "request": "^2.88.0",
-    "mongoose": "^7.2.2",
     "socket.io": "^4.6.2"
   }
 }
